# multi_layer_trading_lab

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  EXTERNAL_REUSE_MAP.md  PAPER_TRADING_RUNBOOK.md  PERSONAL_TRADING_BLUEPRINT.md  README.md  ROADMAP.md  TASKS.md  pyproject.toml
configs/: base.yaml  brokers.yaml  contracts.yaml  external_repos.example.toml  hk_market_holidays.example.json  personal_trading.yaml  research.yaml  risk.yaml  storage.yaml
data_contracts/: README.md  daily_features.md  execution_log.md  feature_registry.md  fills.md  ifind_events.md  intraday_l2_features.md  orders.md  positions.md  risk_snapshots.md  security_master.md  signal_events.md
scripts/: render_launchd_plist.py  run_daily_ops.py  run_demo.py  run_research_demo.py
tests/: conftest.py  test_backtest_integration.py  test_bayes_labels.py  test_cli.py  test_contracts.py  test_cost_capacity.py  test_daily_ops.py  test_data_quality.py  test_data_source_readiness.py  test_demo_pipeline.py  test_dry_run_evidence.py  test_execution_adapters.py  test_external_portfolio.py  test_external_repos.py  test_external_signals.py  test_factor_factory.py  test_features.py  test_freshness.py  test_futu_readiness.py  test_futu_reports.py  test_hshare_verified.py  test_ifind_adapter.py  test_l2_loader.py  test_l2_order_add_features.py  test_l2_profile.py  test_launchd.py  test_lead_lag.py  test_lookahead.py  test_models.py  test_objective_audit.py  test_opend_tickets.py  test_operator_handoff.py  test_ops_report.py  test_order_add_backtest.py  test_paper_audit.py  (+19 more)
(+101 files in other folders)
