[project]
name = "multi_layer_trading_lab"
version = "0.1.0"
description = "A local-first multi-layer research and execution framework for HK/US equities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "polars>=1.12.0",
  "pyarrow>=17.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "typer>=0.12.5",
  "rich>=13.9.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[project.scripts]
mttl = "multi_layer_trading_lab.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
